# array-api-extra

./: .all-contributorsrc  .dprint.jsonc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTORS.md  README.md  RELEASING.md  api-assorted.html  api-lazy.html  api-reference.html  api-testing.html  codecov.yml  contributing.html  contributors.html  genindex.html  index.html  lefthook.yml  meson.build  objects.inv  pixi.toml  pyproject.toml  renovate.json  search.html  searchindex.js  testing-utils.html  typos.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml  docs-build.yml  docs-deploy.yml  docs.yml  test-vendor.yml
_sources/: api-assorted.md.txt  api-reference.md.txt  contributing.md.txt  index.md.txt
_static/: documentation_options.js
docs/: api-assorted.md  api-lazy.md  api-reference.md  api-testing.md  conf.py  contributing.md  index.md  requirements.txt  testing-utils.md
docs/_templates/: testing-function.rst
docs/_templates/autosummary/: class.rst  function.rst
run_deps_tests/: __init__.py  test_run_deps.py
src/array_api_extra/: __init__.py  _apply.py  _compat.py  _delegation.py  _delegators.py  _funcs.py  _random.py  _typing.py  _utils.py  testing.py
src/array_api_extra/_lib/: __init__.py  _at.py  _backends.py  _compat.py  _compat.pyi  _funcs.py  _lazy.py  _libraries.py  _quantile.py  _testing.py  _typing.py  _utils.py
src/array_api_extra/_lib/_utils/: _compat.py  _compat.pyi  _helpers.py  _typing.py  _typing.pyi
tests/: __init__.py  conftest.py  meson.build  test_at.py  test_deprecation.py  test_funcs.py  test_helpers.py  test_lazy.py  test_testing.py  test_utils.py  test_version.py
vendor_tests/: __init__.py  _array_api_compat_vendor.py  meson.build  test_vendor.py
